ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: fe.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: fe
              port:
                number: 8082
  - host: broker.info
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: broker
              port:
                number: 8080
